test_datas/compile_fail/bad_import_alias.pgl
package main;

func main() {
    println(bad_alias.func1(1));
}
